Bug 1684967 - Don't dispose GeckoEditableChild during JNI call. r=geckoview-reviewers,aklotz a=pascalc

This is a regression by bug 1651705.

After landing it, we use read-write lock to access GeckoEditableChild object.
But when using form submission with target=_blank, since we use some nested
event loop to open new window in same process, we may try to dispose
GeckoEditableChild even if it is still used. Then, it may be dead lock.

So I add a blocker class helper not to dispose GeckoEditableChild immediately.

Differential Revision: https://phabricator.services.mozilla.com/D103742